--- a/user_admin/listTreatment_all.html
+++ b/user_admin/listTreatment_all.html
@@ -28,6 +28,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--end::Fonts -->
 
 		<!--begin::Page Vendors Styles(used by this page) -->
+		<link href="assets/plugins/custom/datatables/datatables.bundle.css" rel="stylesheet" type="text/css">
 
 		<!--end::Page Vendors Styles -->
 
@@ -109,7 +110,7 @@ License: You must have a valid license purchased only from themeforest(the above
 					<div class="kt-aside-menu-wrapper kt-grid__item kt-grid__item--fluid" id="kt_aside_menu_wrapper">
 						<div id="kt_aside_menu" class="kt-aside-menu " data-ktmenu-vertical="1" data-ktmenu-scroll="1" data-ktmenu-dropdown-timeout="500">
 							<ul class="kt-menu__nav ">
-								<li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="user_admin/index.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+								<li class="kt-menu__item " aria-haspopup="true"><a href="user_admin/index.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 								    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 								        <polygon id="Shape" points="0 0 24 0 24 24 0 24"/>
 								        <path d="M5.85714286,2 L13.7364114,2 C14.0910962,2 14.4343066,2.12568431 14.7051108,2.35473959 L19.4686994,6.3839416 C19.8056532,6.66894833 20,7.08787823 20,7.52920201 L20,20.0833333 C20,21.8738751 19.9795521,22 18.1428571,22 L5.85714286,22 C4.02044787,22 4,21.8738751 4,20.0833333 L4,3.91666667 C4,2.12612489 4.02044787,2 5.85714286,2 Z" id="Combined-Shape" fill="#000000" fill-rule="nonzero" opacity="0.3"/>
@@ -117,7 +118,7 @@ License: You must have a valid license purchased only from themeforest(the above
 								        <rect id="Rectangle-Copy" fill="#000000" x="6" y="15" width="5" height="2" rx="1"/>
 								    </g>
 								</svg></span><span class="kt-menu__link-text">Form Treatment</span></a></li>
-								<li class="kt-menu__item  kt-menu__item--submenu" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+								<li class="kt-menu__item  kt-menu__item--submenu kt-menu__item--open kt-menu__item--here" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 								    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 								        <rect id="bound" x="0" y="0" width="24" height="24"/>
 								        <path d="M8,3 L8,3.5 C8,4.32842712 8.67157288,5 9.5,5 L14.5,5 C15.3284271,5 16,4.32842712 16,3.5 L16,3 L18,3 C19.1045695,3 20,3.8954305 20,5 L20,21 C20,22.1045695 19.1045695,23 18,23 L6,23 C4.8954305,23 4,22.1045695 4,21 L4,5 C4,3.8954305 4.8954305,3 6,3 L8,3 Z" id="Combined-Shape" fill="#000000" opacity="0.3"/>
@@ -133,7 +134,7 @@ License: You must have a valid license purchased only from themeforest(the above
 									<div class="kt-menu__submenu "><span class="kt-menu__arrow"></span>
 										<ul class="kt-menu__subnav">
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_admin/listTreatment_active.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Active Treatments</span></a></li>
-											<li class="kt-menu__item " aria-haspopup="true"><a href="user_admin/listTreatment_all.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">All Treatments</span></a></li>
+											<li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="user_admin/listTreatment_all.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">All Treatments</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_admin/listTreatment_void.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Void Treatments</span></a></li>
 										</ul>
 									</div>
@@ -308,118 +309,50 @@ License: You must have a valid license purchased only from themeforest(the above
 						<!-- begin:: Content -->
 						<div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
 
-							<div class="row justify-content-center">
-								<h4 class="horizontal-centered">Form Treatment</h4>
-							</div>
+                            <div class="row row-centered">
 
-							<div class="row justify-content-center">
+								<div class="col-12">
 
-								<div class="col-lg-8 col-xl-6">
-
-									<!--begin::Portlet-->
-
-									<div class="kt-portlet kt-portlet--mobile">
+                                    <!--begin::Portlet-->
+									<div class="kt-portlet">
 										<div class="kt-portlet__head">
 											<div class="kt-portlet__head-label">
-												<h3 class="kt-portlet__head-title color-main-dark">
-													No. Pesanan <small class="color-main-dark" name="no_pesanan">#123456</small>
+												<span class="kt-portlet__head-icon">
+													<i class="flaticon2-cube-1"></i>
+												</span>
+												<h3 class="kt-portlet__head-title">
+													All Treatment
 												</h3>
 											</div>
 										</div>
 										<div class="kt-portlet__body">
-											<form id="kt_form_1">
-												<div class="form-group">
-													<label class="form-control-label">Nama</label>
-													<input type="text" class="form-control" type="text" name="treatment_customer_nama" placeholder="Nama">
-												</div>
-												<div class="form-group">
-													<label class="form-control-label">No. Telepon</label>
-													<input type="text" class="form-control" type="text" name="treatment_customer_nohp" placeholder="No. Telepon">
-													<div class="col-12" style="padding:0px;text-align:right;">
-														<button type="button" class="btn btn-link" style="padding-right:0px;" data-toggle="modal" data-target="#kt_modal_1"><i class="flaticon-add"></i>Tambah Pelanggan</button>
+
+                                            <!--begin: Search Form -->
+                                            <form class="kt-form kt-form--fit kt-margin-b-10">
+    											<div class="row" style="justify-content:space-between;">
+													<div class="col-4 input-daterange input-group" id="kt_datepicker">
+														<input readonly type="text" class="form-control kt-input" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu"/>
+														<div class="input-group-append">
+															<span class="input-group-text">
+																<i class="la la-calendar"></i>
+															</span>
+														</div>
 													</div>
-												</div>
-												<div class="form-group">
-													<label class="form-control-label">Catatan</label>
-													<textarea type="text" class="form-control" rows="3" name="treatment_catatan" placeholder="Catatan"></textarea>
-												</div>
-												<div class="col-12 horizontal-centered kt-margin-0" style="padding: 0px 0px">
-													<button type="submit" class="btn btn-success" style="width:25%;" id="kt_sweetalert_berhasil">Submit</buttton>
-												</div>
-											</form>
+													<div class="col-4">
+	    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
+													</div>
+    											</div>
+    										</form>
+
+                                            <!-- end: Search Form -->
+
+                                            <table class="table table-striped- table-bordered table-hover table-checkable" id="table_treatment_all"></table>
+
+        									<!--end: Datatable -->
 										</div>
 									</div>
 
 									<!--end::Portlet-->
-								</div>
-
-							</div>
-
-							<!--begin::Modal-->
-							<div class="modal fade" id="kt_modal_1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-								<div class="modal-dialog" role="document">
-									<div class="modal-content">
-										<div class="modal-header">
-											<h5 class="modal-title" id="exampleModalLabel">Tambah Pelanggan</h5>
-											<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-											</button>
-										</div>
-										<form id="kt_form_2">
-											<div class="modal-body">
-												<div class="form-group row">
-													<label for="example-text-input" class="col-4 col-form-label">Nama</label>
-													<div class="col-8">
-														<input type="text" class="form-control" name="customer_nama">
-													</div>
-												</div>
-												<div class="form-group row">
-													<label for="example-text-input" class="col-4 col-form-label">Tanggal Lahir</label>
-													<div class="col-8">
-														<div class="input-group date">
-															<input type="text" class="form-control" readonly="" placeholder="Select date" id="kt_datepicker_2" name="customer_lahir">
-															<div class="input-group-append">
-																<span class="input-group-text">
-																	<i class="la la-calendar-check-o"></i>
-																</span>
-															</div>
-														</div>
-														<span class="form-text text-muted" style="margin:0px;"></span>
-													</div>
-												</div>
-												<div class="form-group row">
-													<label for="example-text-input" class="col-4 col-form-label">No. Telepon</label>
-													<div class="col-8">
-														<input type="text" class="form-control" name="customer_nohp">
-													</div>
-												</div>
-												<div class="form-group row">
-													<label for="example-text-input" class="col-4 col-form-label">Email</label>
-													<div class="col-8">
-														<input type="email" class="form-control" name="customer_email">
-													</div>
-												</div>
-												<div class="form-group row">
-													<label for="example-text-input" class="col-4 col-form-label">Alamat</label>
-													<div class="col-8">
-														<input type="text" class="form-control" name="customer_alamat">
-													</div>
-												</div>
-												<div class="form-group row">
-													<label for="example-text-input" class="col-4 col-form-label">Persetujuan</label>
-													<div class="col-6">
-														<input type="text" class="form-control" style="background-color:#17bdbd26;color:#17bdbd" value="Setuju" readonly>
-													</div>
-													<div class="col-2">
-														<a class="btn btn-success" id="showtoast" style="color:#fff; cursor:pointer;">Send</a>
-													</div>
-												</div>
-											</div>
-											<div class="modal-footer" style="justify-content:center;">
-												<button type="reset" class="btn btn-secondary" data-dismiss="modal">Close</button>
-												<button type="submit" class="btn btn-success" id="kt_sweetalert_berhasil_modal">Submit</button>
-											</div>
-										</div>
-									</form>
 								</div>
 							</div>
 
@@ -493,107 +426,13 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--end::Global Theme Bundle -->
 
 		<!--begin::Page Vendors(used by this page) -->
-		<script src="assets/js/pages/crud/forms/widgets/bootstrap-datepicker.js" type="text/javascript"></script>
 		<script src="assets/plugins/custom/datatables/datatables.bundle.js" type="text/javascript"></script>
 
 		<!--end::Page Vendors -->
 
 		<!--begin::Page Scripts(used by this page) -->
+		<script src="assets/js/script/ajax.js"></script>
 
-		<script>
-			$('#kt_sweetalert_berhasil').click(function(e) {
-				swal.fire({
-					title: "Berhasil",
-					text: "Pengisian form berhasil dilakukan",
-					type: "success",
-					confirmButtonText: "Ok",
-					confirmButtonClass: "btn btn-brand"
-				}).then(function(result) {
-					// location.reload();
-				});
-			});
-
-			$('#kt_sweetalert_berhasil_modal').click(function(e) {
-				swal.fire({
-					title: "Berhasil",
-					text: "Pengisian form berhasil dilakukan",
-					type: "success",
-					confirmButtonText: "Ok",
-					confirmButtonClass: "btn btn-brand"
-				});
-			});
-
-			$('#showtoast').click(function() {
-				toastr.options = {
-					"closeButton": false,
-					"debug": false,
-					"newestOnTop": false,
-					"progressBar": false,
-					"positionClass": "toast-top-right",
-					"preventDuplicates": false,
-					"onclick": null,
-					"showDuration": "300",
-					"hideDuration": "1000",
-					"timeOut": "2500",
-					"extendedTimeOut": "1000",
-					"showEasing": "swing",
-					"hideEasing": "linear",
-					"showMethod": "fadeIn",
-					"hideMethod": "fadeOut"
-				}
-				toastr.success("Persetujuan terkirim");
-			});
-
-			$("#kt_form_1").validate({
-	            // define validation rules
-	            rules: {
-	                treatment_customer_nohp: {
-	                    required: true,
-	                    digits: true
-	                },
-	                treatment_customer_nama: {
-	                    required: true
-	                }
-	            },
-
-	            invalidHandler: function(event, validator) {
-	                KTUtil.scrollTop();
-	            },
-	            submitHandler: function(form) {
-	                //form[0].submit(); // submit the form
-	            }
-        	});
-
-			$("#kt_form_2").validate({
-	            // define validation rules
-	            rules: {
-					customer_nama : {
-						required: true
-					},
-					customer_lahir : {
-						required: true
-					},
-					customer_nohp : {
-						required: true,
-						digits: true
-					},
-					customer_email : {
-						required: true,
-						email: true
-					},
-					customer_alamat : {
-						required: true
-					}
-	            },
-
-	            invalidHandler: function(event, validator) {
-	                KTUtil.scrollTop();
-	            },
-	            submitHandler: function(form) {
-	                //form[0].submit(); // submit the form
-	            }
-        	});
-		</script>
 		<!--end::Page Scripts -->
 	</body>
 
