--- a/user_inventory/index.html
+++ b/user_inventory/index.html
@@ -64,8 +64,7 @@ License: You must have a valid license purchased only from themeforest(the above
 				</a>
 			</div>
 			<div class="kt-header-mobile__toolbar">
-				<button class="kt-header-mobile__toggler kt-header-mobile__toggler--left" id="kt_aside_mobile_toggler"><span></span></button>
-				<button class="kt-header-mobile__toggler" id="kt_header_mobile_toggler"><span></span></button>
+				<button class="kt-header-mobile__toggler" id="kt_aside_mobile_toggler"><span></span></button>
 				<button class="kt-header-mobile__topbar-toggler" id="kt_header_mobile_topbar_toggler"><i class="flaticon-more"></i></button>
 			</div>
 		</div>
@@ -109,6 +108,9 @@ License: You must have a valid license purchased only from themeforest(the above
 					<!-- begin:: Aside Menu -->
 					<div class="kt-aside-menu-wrapper kt-grid__item kt-grid__item--fluid" id="kt_aside_menu_wrapper">
 						<div id="kt_aside_menu" class="kt-aside-menu " data-ktmenu-vertical="1" data-ktmenu-scroll="1" data-ktmenu-dropdown-timeout="500">
+							<div class="side-logo-container">
+								<h4 class="sidebar-logo">INVENTORY PAGE</h4>
+							</div>
                             <ul class="kt-menu__nav ">
 								<li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="user_inventory/index.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 									<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -156,7 +158,7 @@ License: You must have a valid license purchased only from themeforest(the above
 							<div id="kt_header_menu" class="kt-header-menu kt-header-menu-mobile  kt-header-menu--layout-default ">
                                 <div class="kt-menu__nav ">
 									<div class="kt-menu__item  kt-menu__item--submenu kt-menu__item--rel">
-    									<h4 class="kt-menu__link-text" style="margin-bottom:0px; font-weight: 800;">INVENTORY</h4>
+    									<h4 class="kt-menu__link-text" style="margin-bottom:0px; font-weight: 800;">INVENTORY PAGE</h4>
 									</div>
 								</div>
 							</div>
