--- a/user_admin/listTreatment_all.html
+++ b/user_admin/listTreatment_all.html
@@ -330,7 +330,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													<i class="flaticon2-cube-1"></i>
 												</span>
 												<h3 class="kt-portlet__head-title">
-													All Treatment
+													All Treatments
 												</h3>
 											</div>
 										</div>
