--- a/user_admin/customer_detail.html
+++ b/user_admin/customer_detail.html
@@ -296,18 +296,13 @@ License: You must have a valid license purchased only from themeforest(the above
 							<div class="kt-container  kt-container--fluid ">
 								<div class="kt-subheader__main">
 									<h3 class="kt-subheader__title">
-										Tabbed Subheader </h3>
+										Customer </h3>
 									<span class="kt-subheader__separator kt-hidden"></span>
 									<div class="kt-subheader__breadcrumbs">
-										<a href="#" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
+										<a href="user_admin/customer.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
 										<span class="kt-subheader__breadcrumbs-separator"></span>
-										<a href="" class="kt-subheader__breadcrumbs-link">
-											Subheaders </a>
-										<span class="kt-subheader__breadcrumbs-separator"></span>
-										<a href="" class="kt-subheader__breadcrumbs-link">
-											Classic </a>
-
-										<!-- <span class="kt-subheader__breadcrumbs-link kt-subheader__breadcrumbs-link--active">Active link</span> -->
+										<a href="user_admin/customer_detail.html" class="kt-subheader__breadcrumbs-link">
+											Customer Details </a>
 									</div>
 								</div>
 							</div>
@@ -330,7 +325,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													<i class="flaticon2-user-outline-symbol"></i>
 												</span>
 												<h3 class="kt-portlet__head-title">
-													Customer Detail
+													Customer Details
 												</h3>
 											</div>
 										</div>
