--- a/user_admin/listTreatment_detail_scheduled.html
+++ b/user_admin/listTreatment_detail_scheduled.html
@@ -60,7 +60,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		<div id="kt_header_mobile" class="kt-header-mobile  kt-header-mobile--fixed ">
 			<div class="kt-header-mobile__logo">
 				<a href="index.html">
-					<img alt="Logo" src="assets/media/logos/logo-light.png" />
+					<h4 class="sidebar-logo">FABULASH</h4>
 				</a>
 			</div>
 			<div class="kt-header-mobile__toolbar">
@@ -80,7 +80,7 @@ License: You must have a valid license purchased only from themeforest(the above
 					<div class="kt-aside__brand kt-grid__item " id="kt_aside_brand">
 						<div class="kt-aside__brand-logo">
 							<a href="index.html">
-								<img alt="Logo" src="assets/media/logos/logo-light.png" />
+								<h4 class="aside-logo">FABULASH</h4>
 							</a>
 						</div>
 						<div class="kt-aside__brand-tools">
