--- a/user_admin/index.html
+++ b/user_admin/index.html
@@ -331,9 +331,8 @@ License: You must have a valid license purchased only from themeforest(the above
 											<form id="kt_form_1">
 												<div class="form-group">
 													<label class="form-control-label">Nama</label>
-													<input class="form-control kt-select2" id="kt_select2_treatment_customer_nama" name="treatment_customer_nama">
-														<option></option>
-													</select>
+													<select class="form-control kt-select2" id="kt_select2_treatment_customer_nama" name="treatment_customer_nama"></select>
+													<span class="form-text text-muted kt-hidden" style="margin:0px;"></span>
 												</div>
 												<div class="form-group">
 													<label class="form-control-label">No. Telepon</label>
@@ -372,39 +371,39 @@ License: You must have a valid license purchased only from themeforest(the above
 												<div class="form-group row">
 													<label for="example-text-input" class="col-4 col-form-label">Nama</label>
 													<div class="col-8">
-														<input type="text" class="form-control" name="customer_nama">
+														<input type="text" class="form-control" name="customer_nama" placeholder="Nama">
 													</div>
 												</div>
 												<div class="form-group row">
 													<label for="example-text-input" class="col-4 col-form-label">Tanggal Lahir</label>
 													<div class="col-8">
 														<div class="input-group date">
-															<input type="text" class="form-control" readonly="" placeholder="Select date" id="kt_datepicker_2" name="customer_lahir">
+															<input type="text" class="form-control" readonly="" placeholder="Tanggal" id="kt_datepicker_2" name="customer_lahir">
 															<div class="input-group-append">
 																<span class="input-group-text">
 																	<i class="la la-calendar-check-o"></i>
 																</span>
 															</div>
 														</div>
-														<span class="form-text text-muted" style="margin:0px;"></span>
+														<span class="form-text text-muted kt-hidden"></span>
 													</div>
 												</div>
 												<div class="form-group row">
 													<label for="example-text-input" class="col-4 col-form-label">No. Telepon</label>
 													<div class="col-8">
-														<input type="text" class="form-control" name="customer_nohp">
+														<input type="text" class="form-control" name="customer_nohp" placeholder="No. Telepon">
 													</div>
 												</div>
 												<div class="form-group row">
 													<label for="example-text-input" class="col-4 col-form-label">Email</label>
 													<div class="col-8">
-														<input type="email" class="form-control" name="customer_email">
+														<input type="email" class="form-control" name="customer_email" placeholder="Email">
 													</div>
 												</div>
 												<div class="form-group row">
 													<label for="example-text-input" class="col-4 col-form-label">Alamat</label>
 													<div class="col-8">
-														<input type="text" class="form-control" name="customer_alamat">
+														<input type="text" class="form-control" name="customer_alamat" placeholder="Alamat">
 													</div>
 												</div>
 												<div class="form-group row">
