--- a/user_admin/listTreatment_detail_paid.html
+++ b/user_admin/listTreatment_detail_paid.html
@@ -299,10 +299,10 @@ License: You must have a valid license purchased only from themeforest(the above
 										List Treatment </h3>
 									<span class="kt-subheader__separator kt-hidden"></span>
 									<div class="kt-subheader__breadcrumbs">
-										<a href="user_admin/listTreatment_active.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
+										<a href="user_admin/listTreatment_all.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
 										<span class="kt-subheader__breadcrumbs-separator"></span>
-										<a href="user_admin/listTreatment_active.html" class="kt-subheader__breadcrumbs-link">
-											Active Treatments </a>
+										<a href="user_admin/listTreatment_all.html" class="kt-subheader__breadcrumbs-link">
+											All Treatments </a>
 										<span class="kt-subheader__breadcrumbs-separator"></span>
 										<a href="user_admin/listTreatment_detail_paid.html" class="kt-subheader__breadcrumbs-link">
 											Treatment Details </a>
@@ -427,39 +427,40 @@ License: You must have a valid license purchased only from themeforest(the above
                                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                             </button>
                                         </div>
-                                        <div class="modal-body">
-                                            <form>
+                                        <form id="kt_form_complaint">
+	                                        <div class="modal-body">
                                                 <div class="form-group row">
                                                     <label for="example-text-input" class="col-4 col-form-label">Tanggal</label>
                                                     <div class="col-8">
                                                         <div class="input-group date">
-                                                            <input type="text" name="complaint_tanggal" class="form-control" readonly="" placeholder="Select date" id="kt_datepicker_2">
+                                                            <input type="text" name="complaint_tanggal" class="form-control" readonly="" placeholder="Tanggal" id="kt_datepicker_modal_complaint">
                                                             <div class="input-group-append">
                                                                 <span class="input-group-text">
                                                                     <i class="la la-calendar-check-o"></i>
                                                                 </span>
                                                             </div>
                                                         </div>
+														<span class="form-text text-muted kt-hidden">Select a date</span>
                                                     </div>
                                                 </div>
                                                 <div class="form-group row">
                                                     <label for="example-text-input" class="col-4 col-form-label">Tipe</label>
                                                     <div class="col-8">
-                                                        <input type="text" class="form-control" name="complaint_tipe">
+                                                        <input type="text" class="form-control" name="complaint_tipe" placeholder="Tipe">
                                                     </div>
                                                 </div>
                                                 <div class="form-group row">
                                                     <label for="example-text-input" class="col-4 col-form-label">Complaint</label>
                                                     <div class="col-8">
-                                                        <textarea class="form-control" id="exampleTextarea" rows="3" name="complaint_text"></textarea>
+                                                        <textarea class="form-control" id="exampleTextarea" rows="3" name="complaint_text" placeholder="Complaint..."></textarea>
                                                     </div>
                                                 </div>
-                                            </form>
-                                        </div>
-                                        <div class="modal-footer" style="justify-content:center;">
-                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                            <button type="button" class="btn btn-success">Submit</button>
-                                        </div>
+	                                        </div>
+	                                        <div class="modal-footer" style="justify-content:center;">
+	                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+	                                            <button type="submit" class="btn btn-success" id="kt_sweetalert_berhasil">Submit</button>
+	                                        </div>
+										</form>
                                     </div>
                                 </div>
                             </div>
@@ -541,11 +542,60 @@ License: You must have a valid license purchased only from themeforest(the above
 
 		<!--begin::Page Scripts(used by this page) -->
 		<script src="assets/js/script/ajax.js"></script>
+		<!-- <script src="assets/js/pages/crud/forms/widgets/bootstrap-datepicker.js" type="text/javascript"></script> -->
+
 
 		<script>
+			// Print Function
 			function printFunction() {
 			window.print();
 			}
+
+			// Datepicker
+			var arrows;
+		    if (KTUtil.isRTL()) {
+		        arrows = {
+		            leftArrow: '<i class="la la-angle-right"></i>',
+		            rightArrow: '<i class="la la-angle-left"></i>'
+		        }
+		    } else {
+		        arrows = {
+		            leftArrow: '<i class="la la-angle-left"></i>',
+		            rightArrow: '<i class="la la-angle-right"></i>'
+		        }
+		    }
+
+			$('#kt_datepicker_modal_complaint').datepicker({
+			   rtl: KTUtil.isRTL(),
+			   todayHighlight: true,
+			   orientation: "bottom left",
+			   templates: arrows
+		   });
+
+		   // Form Validation
+		   $("#kt_form_complaint").validate({
+			   // define validation rules
+			   rules: {
+				   complaint_tanggal : {
+					   required: true,
+	                   date: true
+				   },
+				   complaint_tipe : {
+					   required: true
+				   },
+				   complaint_text : {
+					   required: true
+				   }
+			   },
+
+			   invalidHandler: function(event, validator) {
+				   KTUtil.scrollTop();
+			   },
+			   submitHandler: function(form) {
+				   //form[0].submit(); // submit the form
+			   }
+		   });
+
 		</script>
 		<!--end::Page Scripts -->
 	</body>
